<resources>
    <string name="app_name">StartProjeect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dobroPozh">Добро пожаловать</string>
    <string name="Start">Начать</string>
    <string name="Next">Далее</string>
    <string name="startTravel">Начнем путешествие</string>
    <string name="secondFragmentText">Умная, великолепная и модная коллекция Изучите сейчас</string>
    <string name="Power">У вас есть сила, чтобы</string>
    <string name="beautidul">В вашей комнате много красивых и привлекательных растений</string>
    <string name="logintext">Заполните Свои Данные Или Продолжите Через Социальные Медиа</string>
    <string name="logInMain">Привет!</string>
    <string name="reg">Регистрация</string>
    <string name="pdf"><a href="">Даю согласие на обработку персональных данных</a></string>
    <string name="forgotPassword">Введите Свою Учетную Запись Для Сброса</string>
    <string name="OTPmainText">Пожалуйста, проверьте свою электронную почту, чтобы увидеть код подтверждения</string>
    <string name="otp_text">OTP проверка</string>
    <string name="sales">Акции</string>
    <string name="popilar">Популярное</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur. Venenatis pulvinar lobortis risus consectetur morbi egestas id in bibendum. Volutpat nulla urna sit sed diam nulla.</string>
    <string name="email">Проверьте Ваш Email</string>
    <string name="text_from_dialog">Мы отправили код восстановления пароля на вашу электронную почту.</string>
    <string name="categ">Категории</string>
</resources>