<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.onboarding.ThirdFragment"
    android:theme="@style/OnBoarding"
    android:background="@drawable/background_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_height="wrap_content"
        android:background="@drawable/snek_three"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Power"
        style="@style/textOnBoarding"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beautidul"
        style="@style/textSecondOnBoarding"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="12dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/thirddd"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_onboarding"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Next"
        android:textAllCaps="false"
        android:layout_marginTop="84dp"
        />

</LinearLayout>