<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.registration.RegisterAccountFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrowback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_back"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/reg"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    style="@style/loginBig"/>
    <TextView
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/logintext"
        android:gravity="center"
        android:layout_marginTop="8dp"
        style="@style/loginSmall"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ваше имя"
            android:layout_marginTop="30dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_text"
            app:mask="xxxxxxxx"
            android:hint="xxxxxxxx"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:layout_marginTop="30dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_text"
            android:hint="xyz@gmail.com" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Пароль"
            android:layout_marginTop="30dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            app:passwordToggleDrawable="@drawable/eye_slash"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="●●●●●●●●"
                android:inputType="textPassword"
                android:background="@drawable/input_text"
                style="@style/textInput"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pdf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pdf"
                android:textColor="@color/black_for_app"
                android:layout_gravity="center"
                android:gravity="left"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logindtnn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_btn"
            android:layout_marginTop="25dp"
            android:text="Зарегестрироваться"
            android:textAllCaps="false"
            style="@style/blueBTN" />
    </LinearLayout>
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Есть аккаунт?"
            android:layout_marginRight="3dp"
            style="@style/vpervii"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/createUserTExt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Войти"
            style="@style/vpervii"
            android:textColor="#2B2B2B"/>
    </LinearLayout>


</LinearLayout>