<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:name="com.example.startprojeect.presentation.HomeFragment"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".presentation.HomeFragment"
android:background="@drawable/for_menu_test"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
        android:id="@+id/scrollID"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/test_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ham"
                android:layout_width="25dp"
                android:layout_height="18dp"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:src="@drawable/hamburger" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/main" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/shopBagFromToolbar"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:src="@drawable/shopping_bag_red" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:gravity="center"
            android:orientation="horizontal">

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/settings_icon" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="24dp"
            android:text="@string/categ" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listCategory"
            android:name="com.example.startprojeect.presentation.HomeFragment"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="16dp"
            app:layoutManager="LinearLayoutManager"
            tools:context=".presentation.HomeFragment"
            tools:listitem="@layout/fragment_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/popilar" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Все" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_popular"
            android:name="com.example.startprojeect.presentation.FavoriteFragment"
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="15dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:context=".presentation.FavoriteFragment"
            tools:listitem="@layout/fragment_favorite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sales" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Все" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_stock"
                android:name="com.example.startprojeect.presentation.FavoriteFragment"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:context=".presentation.FavoriteFragment"
                tools:listitem="@layout/fragment_stock" />
        </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
